# gym-backend

./: Dockerfile  Makefile  compose.yaml  pyproject.toml
.github/workflows/: tests.yaml
src/api/routers/: person.py
src/api/schemas/: person.py
src/app/: __init__.py
src/core/entity/: __init__.py  check_in.py  exercise.py  person.py  personal.py  training.py
src/core/repository/: check_in_repository.py
src/core/use_cases/check_in/: get_check_ins.py  make_check_in.py
src/database/migration/: v0.0.0__gym_backend.sql
src/entities/: person.py
src/infra/repository/: check_in_repository_memory.py
src/models/: person.py
src/resources/: __init__.py  person.py
src/resources/impl/: person_impl.py
src/service/: person.py
src/service/impl/: person_impl.py
tests/core/use_cases/check_in/: make_check_in_test.py
