[tool.poetry]
name = "gym-backend"
version = "0.1.0"
description = ""
authors = ["Fylype Wase"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
isort = "^5.10.1"
black = "^22.8.0"
autoflake = "^1.6.1"
pytest = "^7.1.3"
freezegun = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
